--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "bs": "npm run clean && npm run build && npm run build:server && npm run start:prod",
     "build": "cross-env NODE_ENV=production webpack --config webpack.config.prod.js",
     "build:server": "cross-env NODE_ENV=production webpack --config webpack.config.server.js",
+    "build:server-debug": "cross-env NODE_ENV=production webpack --config webpack.config.server-debug.js",
+    "build:debug": "npm run clean && npm run build && npm run build:server-debug",
     "clean": "rimraf dist",
     "slate": "rimraf node_modules && npm install",
     "lint": "eslint client server"
@@ -32,21 +34,28 @@
   "license": "MIT",
   "dependencies": {
     "babel-core": "^6.9.1",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.1",
     "compression": "^1.6.2",
+    "cookie-parser": "^1.4.3",
+    "cookies": "^0.6.1",
     "cross-env": "^1.0.8",
     "cuid": "^1.3.8",
     "express": "^4.13.4",
+    "express-session": "^1.14.1",
     "intl": "^1.2.4",
     "intl-locales-supported": "^1.0.0",
     "isomorphic-fetch": "^2.2.1",
+    "jsonwebtoken": "^7.1.9",
     "limax": "^1.3.0",
     "material-ui": "^0.16.0",
     "mongoose": "^4.4.20",
+    "morgan": "^1.7.0",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
     "passport-local": "^1.0.0",
     "react": "^15.1.0",
+    "react-cookie": "^0.4.8",
     "react-dom": "^15.1.0",
     "react-helmet": "^3.1.0",
     "react-intl": "^2.1.2",
@@ -56,6 +65,7 @@
     "react-select": "^1.0.0-rc.2",
     "redux": "^3.5.2",
     "redux-auth": "0.0.5-beta5",
+    "redux-form": "^6.1.1",
     "redux-thunk": "^2.1.0",
     "sanitize-html": "^1.11.4"
   },
