--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-redux": "^4.4.5",
     "react-router": "^2.4.1",
     "react-router-redux": "^4.0.6",
+    "react-rte": "^0.10.1",
     "react-select": "^1.0.0-rc.2",
     "redux": "^3.5.2",
     "redux-auth": "0.0.5-beta5",
