--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "clean": "rimraf dist",
     "slate": "rimraf node_modules && npm install",
     "lint": "eslint client server",
-    "heroku-postbuild": "npm run build && npm run build:server"
+    "build:prod": "npm run clean && npm run build && npm run build:server"
   },
   "pre-commit": [
     "lint",
@@ -66,7 +66,6 @@
     "react-rte": "^0.10.1",
     "react-select": "^1.0.0-rc.2",
     "redux": "^3.5.2",
-    "redux-auth": "0.0.5-beta5",
     "redux-form": "^6.1.1",
     "redux-thunk": "^2.1.0",
     "sanitize-html": "^1.11.4"
