--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "postcss-focus": "^1.0.0",
     "postcss-loader": "^0.9.1",
     "postcss-reporter": "^1.3.3",
+    "postcss-simple-vars": "^3.0.0",
     "pre-commit": "^1.1.3",
     "react-addons-test-utils": "^15.1.0",
     "react-hot-loader": "^3.0.0-beta.2",
