--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "watch:test": "npm run test -- --watch",
     "cover": "nyc npm run test",
     "check-coverage": "nyc check-coverage --statements 100 --branches 100 --functions 100 --lines 100",
-    "start": "cross-env BABEL_DISABLE_CACHE=1 NODE_ENV=development nodemon index.js",
+    "start": "cross-env NODE_ENV=development nodemon index.js",
     "start:prod": "cross-env NODE_ENV=production node index.js",
     "bs": "npm run clean && npm run build && npm run build:server && npm run start:prod",
     "build": "cross-env NODE_ENV=production webpack --config webpack.config.prod.js",
     "build:server": "cross-env NODE_ENV=production webpack --config webpack.config.server.js",
-    "build:server-debug": "cross-env NODE_ENV=production webpack --config webpack.config.server-debug.js",
+    "build:server-debug": "cross-env NODE_ENV=production webpack --config webpack.config.server-debug.js --hot",
     "build:debug": "npm run clean && npm run build && npm run build:server-debug",
     "clean": "rimraf dist",
     "slate": "rimraf node_modules && npm install",
@@ -52,6 +52,7 @@
     "material-ui": "^0.16.0",
     "mongoose": "^4.4.20",
     "morgan": "^1.7.0",
+    "neo4j-driver": "^1.1.0-M03",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
     "passport-local": "^1.0.0",
